# parallels-cli-in-cpp

./: .gitignore  README.md
datasets/: gauss_test.txt  gauss_test2.txt  gauss_test3_300_301.txt  winograd_result.txt
src/: CMakeLists.txt  Makefile
src/Ants/: ants_alg.cc  ants_alg.h  graph.cc  graph.h  main.cc  view.cc  view.h
src/gauss/: main.cc
src/gauss/model/: gauss.cc  gauss.h
src/gauss/view/: view.cc  view.h
src/lib/: common_view.cc  common_view.h  matrix.h
src/winograd/: main.cc
src/winograd/model/: winograd.cc  winograd.h
src/winograd/view/: view.cc  view.h
